--- a/appvideos/src/App.css
+++ b/appvideos/src/App.css
@@ -77,3 +77,11 @@
 #videoElement .publish{
  font-size: 10px;
 }
+
+#container{
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(6, calc(50% - 200px));
+  grid-template-rows: minmax(90px, 1fr);
+  padding: 0 20px;
+}
